# pede_ai

./: LICENSE  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 10440fd3c2cd_subindo_tablelas.py  7e8ffbd702cd_subindo_tabelas.py
db/: session.py  sessions.py
models/: __init__.py  carrinho.py  empresas.py  pedidos.py  produtos.py  usuarios.py
routers/: empresas.py
schemas/: schema_empresas.py
tests/: conftest.py  test_empresa.py  test_teste.py
