[project]
name = "pede-ai"
version = "0.1.0"
description = ""


authors = [
    {name = "Wede _Borges",email = "wederborgesemp@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi[standard] (>=0.139.0,<0.140.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false